--- a/Homework 3_6/Task 3/Task 3.vcxproj
+++ b/Homework 3_6/Task 3/Task 3.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Figures.cpp" />
     <ClCompile Include="Isosceles.cpp" />
     <ClCompile Include="Parallelogram.cpp" />
+    <ClCompile Include="print_info.cpp" />
     <ClCompile Include="Quadrangle.cpp" />
     <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Rhombus.cpp" />
@@ -138,10 +139,12 @@
     <ClCompile Include="Square.cpp" />
     <ClCompile Include="Task 3.cpp" />
     <ClCompile Include="Triangle.cpp" />
+    <ClCompile Include="wrong_figure.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Equilateral.h" />
     <ClInclude Include="Figures.h" />
+    <ClInclude Include="print_info.h" />
     <ClInclude Include="Isosceles.h" />
     <ClInclude Include="Parallelogram.h" />
     <ClInclude Include="Quadrangle.h" />
@@ -150,6 +153,7 @@
     <ClInclude Include="Right_triangle.h" />
     <ClInclude Include="Square.h" />
     <ClInclude Include="Triangle.h" />
+    <ClInclude Include="wrong_figure.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
